--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -10,10 +10,10 @@
             <div class="card">
                 <div class="card-content">
                     <div class="row">
-                        <span class="card-title col l12 hide-on-med-and-down">Choose a Category and Provide a Title for your Quiz</span>
+                        <span class="card-title col xl12 hide-on-large-and-down">Choose a Category and Provide a Title for your Quiz</span>
                         <!-- Quiz Category -->
-                        <span class="card-title col s12 hide-on-large-only">Choose a Category for your Quiz</span>
-                        <div class="input-field col s12 l5 select-container">
+                        <span class="card-title col s12 hide-on-extra-large-only">Choose a Category for your Quiz</span>
+                        <div class="input-field col s12 xl5 select-container">
                             <i id="quizCategoryIcon" class="prefix light-blue-text text-darken-4 fas"></i>
                             <select id="quizCategory" name="quizCategory">
                                 {% for quiz_category in quiz_categories %}
@@ -25,8 +25,8 @@
                             <label>Quiz Category</label>
                         </div>
                         <!-- Quiz Name -->
-                        <span class="card-title col s12 hide-on-large-only">Provide a Title for your Quiz</span>
-                        <div class="input-field col s12 l7">
+                        <span class="card-title col s12 hide-on-extra-large-only">Provide a Title for your Quiz</span>
+                        <div class="input-field col s12 xl7">
                             <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" class="validate" value="" required>
                             <label for="quizTitle" data-error="Invalid Quiz Title" data-default="Quiz Title">Quiz Title</label>
                         </div>
@@ -50,10 +50,10 @@
                                 </div>
                                 <div class="collapsible-body">
                                     <div class="row round-row">
-                                        <span class="title col l12 hide-on-med-and-down">Choose a Category and Provide a Title for this Round</span>
+                                        <span class="title col xl12 hide-on-large-and-down">Choose a Category and Provide a Title for this Round</span>
                                         <!-- Round Category -->
-                                        <span class="title col s12 hide-on-large-only">Choose a Category for this Round</span>
-                                        <div class="input-field col s12 l5 select-container">
+                                        <span class="title col s12 hide-on-extra-large-only">Choose a Category for this Round</span>
+                                        <div class="input-field col s12 xl5 select-container">
                                             <i id="roundCategoryIcon_1" class="prefix light-blue-text text-darken-4 fas"></i>
                                             <select id="roundCategory_1" class="round-category" name="roundCategory_1">
                                                 {% for quiz_category in quiz_categories %}
@@ -65,8 +65,8 @@
                                             <label>Round Category</label>
                                         </div>
                                         <!-- Round Name -->
-                                        <span class="title col s12 hide-on-large-only">Provide a Title for this Round</span>
-                                        <div class="input-field col s12 l7 ">
+                                        <span class="title col s12 hide-on-extra-large-only">Provide a Title for this Round</span>
+                                        <div class="input-field col s12 xl7 ">
                                             <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="25" class="validate" value="Round 1" required>
                                             <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
                                         </div>
