--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
             <div class="input-field col s12">
                 <i class="fas fa-question prefix light-blue-text text-darken-4"></i>
                 <input id="quizSearch" name="quizSearch" type="text" minlength="2" value="" class="validate">
-                <label class="truncate" for="quizSearch" data-error="Please Enter at least 2 Characters." data-default="Quiz Search">Quiz Search</label>
+                <label class="truncate" for="quizSearch" data-error="Please Enter at least 2 Characters." data-default="Search My Quizzes">Search My Quizzes</label>
             </div>
         </div>
         <div class="row">
