--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                 <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
                 {% if session.user %}
                     <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
-                    <li><a href="#">Quiz Search</a></li>
+                    <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
                     {% if session.user_role == "global admin" %}
                         <ul id="nav-admin-dropdown" class="dropdown-content">
                             <li><a href="{{ url_for('admin_users') }}">Users</a></li>
@@ -50,7 +50,7 @@
             <li><a href="{{ url_for('my_quizzes') }}">My Quizzes</a></li>
             {% if session.user %}
                 <li><a href="{{ url_for('new_quiz') }}">New Quiz</a></li>
-                <li><a href="#">Quiz Search</a></li>
+                <li><a href="{{ url_for('quiz_search') }}">Quiz Search</a></li>
                 {% if session.user_role|lower == "global admin"|lower %}
                     <ul id="sidenav-admin-dropdown" class="dropdown-content">
                         <li><a href="{{ url_for('admin_users') }}">Users</a></li>
