--- a/templates/view_quiz.html
+++ b/templates/view_quiz.html
@@ -10,12 +10,12 @@
                 {% if viewQuiz.category == 'general knowledge' %}
                     <i class="fas {{ round.category_icon.class }} fa-fw"></i>
                 {% endif %}
-                {{ round.title }}
+                Round {{ round.round_num }} : {{ round.title }}
             </h4>
             {% for question in round.questions %}
-                <h5 class="light-blue-text text-darken-4 center-align">
-                    {{ question.question_text }}
-                </h5>
+                <h6 class="light-blue-text text-darken-4 left-align">
+                    Q{{ question.question_num}}) {{ question.question_text }}
+                </h6>
 
                 {% if question.question_img_url != '' %}
                     <div class="center-align">
@@ -23,8 +23,8 @@
                     </div>
                 {% endif %}
                 {% if question.multiple_choice == False %}
-                    <h6 class="light-blue-text text-darken-4 center-align">
-                        {{ question.answer_text }}
+                    <h6 class="light-blue-text text-darken-4 left-align">
+                        &emsp;A{{ question.question_num }}) {{ question.answer_text }}
                     </h6>
                     {% if question.answer_img_url != '' %}
                         <div class="center-align">
@@ -33,8 +33,8 @@
                     {% endif %}
                 {% else %}
                     {% for option in question.multiple_choice_options %}
-                        <h6 class="light-blue-text text-darken-4 center-align">
-                            {{ option.answer_text }}
+                        <h6 class="light-blue-text text-darken-4">
+                            &emsp;{{ option.option_num}}) {{ option.answer_text }}
                         </h6>
                         {% if option.answer_img_url != '' %}
                             <div class="center-align">
