Added max-width for quiz-container elem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -534,3 +534,9 @@ form .user-search .search-radio-row {
 #quizSearchResults .collection-item.avatar {
     min-height: initial;
 }
+
+#viewQuiz .quiz-container {
+    max-width: 640px;
+    margin-left: auto;
+    margin-right: auto;
+}
