--- a/templates/quiz_sheet.html
+++ b/templates/quiz_sheet.html
@@ -16,9 +16,13 @@
         <div class="divider"></div>
         <h4 class="light-blue-text text-darken-4 center-align"><i class="fas {{ viewQuiz.category_icon.class }} fa-fw"></i>{{ viewQuiz.category }}</h4>
         <div class="divider"></div>
-        <div class="quiz-container">
+        <div class="quiz-container page-break-after-avoid">
             {% for round in viewQuiz.rounds %}
-                <h5 class="light-blue-text text-darken-4 center-align">
+                {% if round.round_num == 1%}
+                    <h5 class="light-blue-text text-darken-4 center-align page-break-inside-avoid page-break-after-avoid">
+                {% else %}
+                    <h5 class="light-blue-text text-darken-4 center-align page-break-before-always page-break-inside-avoid page-break-after-avoid">
+                {% endif %}
                     Round {{ round.round_num }}
                     <p>
                         {% if viewQuiz.category == 'general knowledge' %}
@@ -28,32 +32,37 @@
                     </p>
                 </h5>
                 {% for question in round.questions %}
-                    <h6 class="light-blue-text text-darken-4 left-align">
-                        Q{{ question.question_num}}) {{ question.question_text }}
-                    </h6>
+                    <div class="question-container page-break-inside-avoid">
+                        <h6 class="light-blue-text text-darken-4 left-align">
+                            Q{{ question.question_num}}) {{ question.question_text }}
+                        </h6>
+                        {% if question.question_img_url != '' %}
+                            <div class="center-align">
+                                <img class="quiz-image hidden inline-block" src="{{ question.question_img_url }}">
+                            </div>
 
-                    {% if question.question_img_url != '' %}
-                        <div class="center-align">
-                            <img class="quiz-image hidden" src="{{ question.question_img_url }}">
-                        </div>
-                    {% endif %}
-                    {% if question.multiple_choice == True %}
-                        {% for option in question.multiple_choice_options %}
-                            <h6 class="light-blue-text text-darken-4">
-                                &emsp;{{ option.option_num}}) {{ option.answer_text }}
-                            </h6>
-                            {% if option.answer_img_url != '' %}
-                                <div class="center-align">
-                                    <img class="quiz-image hidden" src="{{ option.answer_img_url }}">
-                                </div>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <div class="divider"></div>
+                        {% endif %}
+                        {% if question.multiple_choice == True %}
+                            {% for option in question.multiple_choice_options %}
+                                <h6 class="light-blue-text text-darken-4">
+                                    &emsp;{{ option.option_num}}) {{ option.answer_text }}
+                                </h6>
+                                {% if option.answer_img_url != '' %}
+                                    <div class="center-align">
+                                        <img class="quiz-image hidden" src="{{ option.answer_img_url }}">
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+                        <div class="divider"></div>
+                    </div>
                 {% endfor %}
-                <div class="divider"></div>
             {% endfor %}
         </div>
     </main>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}"></script>
+<script src="{{ url_for('static', filename='js/xhttp.js') }}"></script>
 <script src="{{ url_for('static', filename='js/viewquiz.js') }}"></script>
