--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -55,8 +55,8 @@
                                             <!-- Round Category -->
                                             <span class="title col s12 hide-on-extra-large-only">Choose a Category for this Round</span>
                                             <div class="input-field col s12 xl5 select-container">
-                                                <i id="roundCategoryIcon_1" class="prefix light-blue-text text-darken-4 fas"></i>
-                                                <select id="roundCategory_1" class="round-category" name="roundCategory_1">
+                                                <i id="roundCategoryIcon_{{ round.round_num }}" class="prefix light-blue-text text-darken-4 fas"></i>
+                                                <select id="roundCategory_{{ round.round_num }}" class="round-category" name="roundCategory_{{ round.round_num }}">
                                                     {% for quiz_category in quiz_categories %}
                                                     <optgroup label='<div class="subopt"><i class="fas {{ quiz_category.category_icon["class"] }} fa-fw light-blue-text text-darken-4"></i> <span class="light-blue-text text-darken-4">{{ quiz_category.category }}</span></div>'>
                                                         <option>{{ quiz_category.category }}</option>
@@ -68,11 +68,11 @@
                                             <!-- Round Name -->
                                             <span class="title col s12 hide-on-extra-large-only">Provide a Title for this Round</span>
                                             <div class="input-field col s12 xl7 ">
-                                                <input id="roundTitle_1" name="round_title_1" type="text" minlength="5" maxlength="25" class="validate" value="{{ round.title }}" required>
-                                                <label for="roundTitle_1" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
+                                                <input id="roundTitle_{{ round.round_num }}" name="round_title_{{ round.round_num }}" type="text" minlength="5" maxlength="25" class="validate" value="{{ round.title }}" required>
+                                                <label for="roundTitle_{{ round.round_num }}" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
                                             </div>
                                             <span class="title col s12">Create Questions for this Round</span>
-                                            <input id="questionCount_1" name="questionCount_1" type="text" class="hidden" value="1">
+                                            <input id="questionCount_{{ round.round_num }}" name="questionCount_{{ round.round_num }}" type="text" class="hidden" value="1">
                                         </div>
                                         <div class="row">
                                             <div class="col s12">
