--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="row">
                         <span class="card-title col s12">Create Rounds for this Quiz</span>
-                        <input id="roundCount" name="roundCount" type="text" class="hidden" value="1">
+                        <input id="roundCount" name="roundCount" type="text" class="hidden" value="{{ quiz.rounds|length }}">
                     </div>
                     <div class="row">
                         <ul class="collapsible expandable">
@@ -46,9 +46,18 @@
                                             <path d="M7 10l5 5 5-5z"></path>
                                             <path d="M0 0h24v24H0z" fill="none"></path>
                                         </svg>
-                                        <div class="rcontrols col s2 right-align">
-                                            <a href="#!" class="rcontrols-add light-blue-text text-darken-4">+</a>
-                                        </div>
+                                        {% if round.round_num == quiz.rounds|length %}
+                                            {% if round.round_num == 1 %}
+                                                <div class="rcontrols col s2 right-align">
+                                                    <a href="#!" class="rcontrols-add light-blue-text text-darken-4">+</a>
+                                                </div>
+                                            {% else %}
+                                                <div class="rcontrols col s2 right-align">
+                                                    <a href="#!" class="rcontrols-remove light-blue-text text-darken-4">-</a>
+                                                    <a href="#!" class="rcontrols-add light-blue-text text-darken-4">+</a>
+                                                </div>
+                                            {% endif %}
+                                        {% endif %}
                                     </div>
                                     <div class="collapsible-body">
                                         <div class="row round-row">
@@ -73,7 +82,7 @@
                                                 <label for="roundTitle_{{ round.round_num }}" data-error="Invalid Round Title" data-default="Round Title">Round Title</label>
                                             </div>
                                             <span class="title col s12">Create Questions for this Round</span>
-                                            <input id="questionCount_{{ round.round_num }}" name="questionCount_{{ round.round_num }}" type="text" class="hidden" value="1">
+                                            <input id="questionCount_{{ round.round_num }}" name="questionCount_{{ round.round_num }}" type="text" class="hidden" value="{{ round.questions|length }}">
                                         </div>
                                         <div class="row">
                                             <div class="col s12">
@@ -87,9 +96,18 @@
                                                                     <path d="M7 10l5 5 5-5z"></path>
                                                                     <path d="M0 0h24v24H0z" fill="none"></path>
                                                                 </svg>
-                                                                <div class="qcontrols col s2 right-align">
-                                                                    <a href="#!" class="qcontrols-add light-blue-text text-darken-4">+</a>
-                                                                </div>
+                                                                {% if question.question_num == round.questions|length %}
+                                                                    {% if question.question_num == 1 %}
+                                                                        <div class="qcontrols col s2 right-align">
+                                                                            <a href="#!" class="qcontrols-add light-blue-text text-darken-4">+</a>
+                                                                        </div>
+                                                                    {% else %}
+                                                                        <div class="qcontrols col s2 right-align">
+                                                                            <a href="#!" class="qcontrols-remove light-blue-text text-darken-4">-</a>
+                                                                            <a href="#!" class="qcontrols-add light-blue-text text-darken-4">+</a>
+                                                                        </div>
+                                                                    {% endif %}
+                                                                {% endif %}
                                                             </div>
                                                             <div class="collapsible-body">
                                                                 <div class="row">
