--- a/templates/new_quiz.html
+++ b/templates/new_quiz.html
@@ -28,7 +28,7 @@
                         <span class="card-title col s12 hide-on-extra-large-only">Provide a Title for your Quiz</span>
                         <div class="input-field col s12 xl7">
                             <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" class="validate" value="" required>
-                            <label for="quizTitle" data-error="Invalid Quiz Title" data-default="Quiz Title">Quiz Title</label>
+                            <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
                         </div>
                     </div>
                     <div class="row">
