--- a/templates/edit_quiz.html
+++ b/templates/edit_quiz.html
@@ -27,8 +27,8 @@
                         <!-- Quiz Name -->
                         <span class="card-title col s12 hide-on-extra-large-only">Provide a Title for your Quiz</span>
                         <div class="input-field col s12 xl7">
-                            <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" class="validate" value="{{ quiz.title }}" required>
-                            <label for="quizTitle" data-error="Invalid Quiz Title" data-default="Quiz Title">Quiz Title</label>
+                            <input id="quizTitle" name="quiz_title" type="text" minlength="5" maxlength="25" class="validate" data-id="{{ quiz._id }}"value="{{ quiz.title }}" required>
+                            <label for="quizTitle" data-error="Invalid Quiz Title" data-dup="Quiz Title already in use.  Please choose another." data-default="Quiz Title">Quiz Title</label>
                         </div>
                     </div>
                     <div class="row">
